asterisk (2:1.8.7.1-1kickstand0) UNRELEASED; urgency=low

  * Initial release
  * Security:
    - AST-2011-014: Remote crash possibility with SIP and the 'automon'
      feature enabled
    - AST-2012-001: SRTP Video Remote Crash Vulnerability
    - AST-2012-002: Remote Crash Vulnerability in Milliwatt Application
    - AST-2012-003: Stack Buffer Overflow in HTTP Manager
    - AST-2012-006: Remote Crash Vulnerability in SIP Channel Driver
  * Backports from branches/1.8:
    - r339719: Fix regression in configure script for libpri capability checks
    - r341314: Don't resolve numeric hosts or contact unresolved hosts
    - r350837: Ensure that all AC_LANG_PROGRAM calls in the configure script
      are properly quoted
    - r352643: Fix -Werror=unused-but-set-variable compiler error
    - r369302: Be more consistent with the return code for requests received
      from invalid domain
    - r375450: Ensure that the Queue application tracks busy members in off
      nominal situations
    - r378663: app_queue: Fix multiple calls to a queue member that is in only
      one queue
  * Backports from trunk:
    - r313528: Add 'description' field for CLI and Manager output
    - r331037: Log queue member name when state_interface is set for ADDMEMBER
      and REMOVEMEMBER events
    - r335170: Parsing cdr.conf
    - r335555: Parsing dnsmgr.conf
    - r335556: Parsing cdr.conf
    - r335603: Parsing dsp.conf
    - r335719: Parsing dnsmgr.conf
    - r341379: Don't use is_int() since it doesn't link well on all platforms
    - r345735: Add #tryinclude statement
    - r360536: Convert ast_verb() to ast_debug() and increase log level
    - r362043: Convert SRV lookup message to debug level
    - r390209: Add queue_log_realtime_use_gmt option to logger.conf

 -- Paul Belanger <paul.belanger@polybeacon.com>  Tue, 02 Apr 2013 15:34:00 -0400